--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="container">
       <center>
         <span id="copyright" class="text-muted">
-          © Copyright 2020: <a href="https://github.com/uJhin"> uJhin's GitHub</a>
+          © Copyright 2020: <a href="https://github.com/U-Jhin-s-Python-Tutorial"> uJhin's GitHub</a>
         </span>
         <br>
         <span id="message" class="text-muted">
