--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <body>
   <!-- Menu-Bar -->
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="https://u-jhin-s-python-tutorial.github.io/Python-Tutorial-Documents/"></a>
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="https://u-jhin-s-python-tutorial.github.io/Python-Tutorial-Documents/">
+      Python Tutorial Documents
+    </a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
