--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="sidebar-sticky pt-3">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link active" href="https://ujhin.github.io/Python-Tutorial-Documents">
+              <a class="nav-link active" href="https://u-jhin-s-python-tutorial.github.io/Python-Tutorial-Documents/">
                 <span data-feather="home"></span>
                 Home <span class="sr-only">(current)</span>
               </a>
