--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
                 02. Why need Data Structure
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" id="pts03" href="#">
+                <span data-feather="file-text"></span>
+                03. Python Easter Eggs
+              </a>
+            </li>
           </ul>
           
           <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
